Add hourlyTable legend and padding

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -226,7 +226,7 @@ body {
 #tableHourlyForecast th,
 #tableHourlyForecast td {
     text-align: center;
-    padding: 0 5px 0 5px;
+    padding: 0 5px 4px 5px;
 }
 
 #tableHourlyForecast th:first-child {
