--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -103,7 +103,7 @@ body {
   padding-right: 0;
 }
 
-#currentApparentTemp, #currentPressure {
+#currentApparentTemp, #currentPressure, #sunset {
   font-size: 28px;
   text-align: right;
   padding-right: 4px;
