--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #071a34;
+  color: white;
+  text-align: center;
+}
+
+footer a {
+  color: #ffffff;
+}
