Fix theme footer

--- a/src/styles/theme/blue.scss
+++ b/src/styles/theme/blue.scss
@@ -7,7 +7,7 @@
 #forecast th,
 #tableHourlyForecast td,
 #tableHourlyForecast th {
-  background-color: #073053;
+  background-color: #083259;
   border-left: 1px solid white;
 }
 
@@ -40,4 +40,8 @@
 #alerts {
   background-color: red;
   color: white;
+}
+
+footer {
+  background-color: #071a34;
 }
